<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10px"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        style="@style/button_01"/>

    <TextView
        android:id="@+id/textView1"
        android:text="@string/txt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        style="@style/text_01"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tbr1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tasks to do in this week"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tbr2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prepare for the meeting"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tbr3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Plan projects"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tbr4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload video to youtube"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tbr5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do exercises"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:text="@string/btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816"
        style="@style/button_02"/>

</androidx.constraintlayout.widget.ConstraintLayout>